# learn_ffmpeg

./: .gitignore  README.md
book/: README.md
demo/: ffmpeg_cmd.py  ffmpeg_cmd_test.py
doc/: 2019-07-18-ffmpeg常用命令行命令.md  cuda随记.md  ffmpeg_conda编译.md  ffmpeg命令.md  ffmpeg简介.md  filters.md  命令行参数.md  硬解码流程.md  问题集.md
doc/基础概念/: ffmpeg参数说明.md  timebase.md  时间戳概念.md
doc/源码解析/: 常用函数.md  常用数据结构.md
doc/编译/: conda编译.md  编译步骤.md
examples/: 1.pkg  2.pkg  3.pkg  CMakeLists.txt  README.md  decode_video.c  file_pic copy.c  file_pic.c
examples/3rd/: README.md  conanbuildinfo.cmake  conanbuildinfo.txt
